--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pylint==2.1.1
-pytest==4.0.1
-PyYAML==3.13
-requests==2.20.1
-urllib3==1.24.1
+pylint>=2.1.1
+pytest>=4.0.1
+PyYAML>=3.13
+requests>=2.20.1
+urllib3>=1.24.1
