--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,25 @@ jobs:
         python-version: "3.x"
     - name: Build package
       run: |
+        echo "${{ env.VERSION }}"
         python -m pip install build
         python -m build
+  
+  
+  push_package:
+  runs-on: ubuntu-latest
+  name: Python Push
+  steps:
+    - uses: actions/checkout@v4
+    - name: Push
+      id: push
+      uses: cloudsmith-io/action@master
+      with:
+        api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
+        command: "push"
+        format: "python"
+        owner: "queeg-5000"
+        repo: "blue-midget"
+        republish: "true" # needed ONLY if version is not changing
+        file: "dist/fastly_debug=${{ env.VERSION }}.tar.gz"
+        executable: false
