--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
           repo: "blue-midget"
           republish: "true" # needed ONLY if version is not changing
           file: "dist/fastly_debug=${{ env.VERSION }}.tar.gz"
-          executable: false
+          executable: "false"
