--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,6 @@ jobs:
       with:
         python-version: "3.x"
     - name: Show version
-      run: echo "${{ needs.build.outputs.version }}"
+      run: |
+        python -m pip install setuptools
+        echo "${{ needs.build.outputs.version }}"
