--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
 
   show-version:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -32,4 +33,4 @@ jobs:
     - name: Show version
       run: |
         python -m pip install setuptools
-        echo "${{ jobs.build.outputs.version }}"
+        echo "${{ needs.build.outputs.version }}"
