--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,24 @@ jobs:
       run: |
         python -m pip install setuptools
         echo "${{ needs.build.outputs.version }}"
+
+  push_package:
+    name: Python Push
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Show version
+        run: echo "${{ needs.build.outputs.version }}"
+      - name: Push
+        id: push
+        uses: cloudsmith-io/action@master
+        with:
+          api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
+          command: "push"
+          format: "python"
+          owner: "queeg-5000"
+          repo: "blue-midget"
+          republish: "true" # needed ONLY if version is not changing
+          file: "dist/fastly_debug-${{ needs.build.outputs.version }}.tar.gz"
+          executable: "false"
