--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,37 +21,15 @@ jobs:
         python -m pip install setuptools
         echo "version=$(python setup.py --version)"
         echo "version=$(python setup.py --version)" >> "$GITHUB_OUTPUT"
-
-  show-version:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - name: Push
+      id: push
+      uses: cloudsmith-io/action@master
       with:
-        python-version: "3.x"
-    - name: Show version
-      run: |
-        python -m pip install setuptools
-        echo "${{ needs.build.outputs.version }}"
-
-  push_package:
-    name: Python Push
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Show version
-        run: echo "${{ needs.build.outputs.version }}"
-      - name: Push
-        id: push
-        uses: cloudsmith-io/action@master
-        with:
-          api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
-          command: "push"
-          format: "python"
-          owner: "queeg-5000"
-          repo: "blue-midget"
-          republish: "true" # needed ONLY if version is not changing
-          file: "dist/fastly_debug-${{ needs.build.outputs.version }}.tar.gz"
-          executable: "false"
+        api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
+        command: "push"
+        format: "python"
+        owner: "queeg-5000"
+        repo: "blue-midget"
+        republish: "true" # needed ONLY if version is not changing
+        file: "dist/fastly_debug-$(python setup.py --version.tar.gz"
+        executable: "false"
