--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,4 @@ jobs:
         owner: "queeg-5000"
         repo: "blue-midget"
         republish: "true" # needed ONLY if version is not changing
-        file: "dist/fastly_debug-$(python setup.py --version.tar.gz"
-        executable: "false"
+        file: "dist/fastly_debug-$(python setup.py --version).tar.gz"
