--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: "3.x"
+    - name: Configure Cloudsmith URL
+      run: |
+        export PIP_INDEX_URL="https://${{ secrets.CLOUDSMITH_AUTOMATION_USER }}:${{ secrets.CLOUDSMITH_API_KEY }}@dl.cloudsmith.io/queeg-5000/blue-midget/python/simple/"
     - name: Install Build package
       id: prereqs
       run: |
